Tue Apr 27 00:07:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (program): check void_expr when rb_parse_in_main().
	  [ruby-dev:38717]

Mon Apr 26 20:11:05 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c, rational.c, lib/cmath.rb, lib/date.rb lib/date/delta*:
	  reverted r27484-27486.  now official spec.

Mon Apr 26 15:42:59 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/json/generator/generator.c (convert_UTF8_to_JSON_ASCII): get rid
	  of a warning.

Mon Apr 26 13:11:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (ripper_get_value): escape Qundef.

Mon Apr 26 12:42:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (warn_balanced): warn according to last state.

Mon Apr 26 09:05:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.4.1.

Sun Apr 25 23:50:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (ruby_dup): update max fd.

Sun Apr 25 21:56:49 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (fetch_internal): do not quote message data item
	  names.  Thanks, Eric Hodel.  [ruby-core:23508]

Sun Apr 25 15:59:02 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb: reverted experimental r23900.

Sun Apr 25 15:51:00 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c, ratioanl.c: reverted experimental r24565.

Sun Apr 25 15:34:48 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/delta*: reverted experimental r24567 and
	  r25393.

Sun Apr 25 11:02:20 2010  wanabe  <s.wanabe@gmail.com>

	* hash.c (ruby_setenv): putenv on msvcrt.dll can't remove empty value.

Sat Apr 24 23:40:50 2010  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb: use [""].pack("p").size to detect the pointer size.

Sat Apr 24 21:07:27 2010  Tanaka Akira  <akr@fsij.org>

	* test/psych/test_psych.rb: don't leave temporary files.

Sat Apr 24 16:27:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (RUBY_PROGRAM_VERSION): added

	* tool/rbinstall.rb: expand target file name.
